GRAPH-401 code generalization (#1341)